[gd_scene load_steps=4 format=3 uid="uid://dpot1yxbaqdjd"]

[ext_resource type="Texture2D" uid="uid://dj81fdngg5atu" path="res://assets/graphics/ui/pauseMenu_wasdKeys.png" id="1_c0oj6"]
[ext_resource type="Script" uid="uid://c1ky3k6ghtem5" path="res://global/pause_menu/pause_menu.gd" id="1_ebvsp"]
[ext_resource type="FontFile" uid="uid://b3yalra5jswgu" path="res://assets/fonts/JosefinSans-Regular.ttf" id="3_wh8p8"]

[node name="PasueMenu" type="CanvasLayer"]
layer = 150
visible = false
script = ExtResource("1_ebvsp")

[node name="Overlayer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.78431374)

[node name="Info" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -799.75
offset_top = -454.5
offset_right = 799.75
offset_bottom = 454.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_c0oj6")
stretch_mode = 5

[node name="Label" type="RichTextLabel" parent="Info"]
layout_mode = 1
offset_left = 218.75
offset_top = 117.5
offset_right = 668.75
offset_bottom = 167.5
theme_override_colors/default_color = Color(0.078431375, 0.7058824, 0.8509804, 1)
theme_override_fonts/normal_font = ExtResource("3_wh8p8")
theme_override_font_sizes/normal_font_size = 32
theme_override_font_sizes/bold_font_size = 32
theme_override_font_sizes/bold_italics_font_size = 32
theme_override_font_sizes/italics_font_size = 32
theme_override_font_sizes/mono_font_size = 32
bbcode_enabled = true
text = "HOLD [color=#f4ad0f][font_size=42]ESC[/font_size][/color] TO RESTART"
horizontal_alignment = 1

[node name="TimerFill" type="ColorRect" parent="Info"]
layout_mode = 1
offset_left = 248.75
offset_top = 164.5
offset_right = 638.75
offset_bottom = 174.5
scale = Vector2(1e-05, 1)
pivot_offset = Vector2(200, 0)
color = Color(0.12156863, 0.8039216, 0.24313726, 1)

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
